<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="NewNoteActivity">

    <EditText
        android:id="@+id/editTextEnterNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textSize="20sp"
        android:hint="@string/enter_note_hint"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonLowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/my_green"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/radio_button_low_priority"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonMediumPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/my_yellow"
            android:padding="12dp"
            android:checked="true"
            android:textStyle="bold"
            android:text="@string/radio_button_medium_priority"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonHighPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/my_red"
            android:padding="12dp"
            android:textStyle="bold"
            android:text="@string/radio_button_high_priority"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textSize="18sp"
        android:background="@color/white"
        android:text="@string/button_save_note" />

</LinearLayout>